src/main/java/com/example/login/error/ShoppingCartException.java
package com.example.login.error;

public class ShoppingCartException extends Throwable{
    public ShoppingCartException(String message) {super(message);}
}
